# EasyFinance

./: .gitignore  Dockerfile  README.es.md  README.md  entrypoints.sh  main.py  pyproject.toml  render.yaml  run_app.ps1
ai_engine/agents/: financial_agent.py  math_agent.py
ai_engine/rag/: ingest.py  retriever.py
ai_engine/rag/vectorstore/db/d217a189-beb1-4ade-a095-2739b8a51438/: index_metadata.pickle
backend/: main.py  schemas.py
backend/api/: amortizacion.py  anualidades.py  chatbot.py  tasas.py
backend/core/: amortization.py  cashflows.py  interest.py
frontend/: app.py  auth.py  i18n.py  utils.py
frontend/assets/: style.css
frontend/modulos/: 1_tasas.py  2_anualidades.py  3_amortizacion.py  4_chatbot_rag.py
