[project]
name = "easy-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.3",
    "fastapi>=0.111.0",
    "google-generativeai>=0.7.0",
    "langchain==0.3.3",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.1.0",
    "langchainhub>=0.1.15",
    "langgraph>=0.2.0",
    "pandas>=2.2.2",
    "pydantic>=2.7.0",
    "pypdf>=4.2.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.35.0",
    "uvicorn>=0.30.0",
]
